tests/mm0_mmu/fail/bad-sort4312.mmu
-- bad modifier order
(sort s4312 free provable pure strict)